# DissertationSimulation

./: CMakeLists.txt  README.md  hll.cpp  main.cpp
classes/: TestFile.cpp  TestFile.hpp
flowcharts/: csvProbabilities(3)(1).drawio  sampler(4).drawio  testFileGenerator.drawio
sampleFiles/: testFileSample.txt
sampleFiles/256bits/: results.csv  testFile.txt  testFileSample10.txt  testFileSample100.txt  testFileSample5.txt  testFileSample500.txt  testFileSample750.txt
sampleFiles/64bits/: HllResults.csv  HllResultsFullFile.csv  results.csv  testFile.txt  testFileSample10.txt  testFileSample100.txt  testFileSample1000.txt  testFileSample5.txt  testFileSample500.txt  testFileSample750.txt
testFile/: testFileGenerator.cpp  testFileSampler.cpp
utilities/: random.cpp  random.hpp
